syntax = "proto3";

package com.example.grpc.product;

message AccountProductMessage {
  string url = 1;
  string accountUuid = 2;
  int32 actualPrice = 3;
  int32 pastPrice = 4;
  int64 updatedAt = 5;
}

message ProductMessage {
  string url = 1;
  string name = 2;
  int32 actualPrice = 3;
  int32 pastPrice = 4;
  int64 updatedAt = 5;
}

message StringIntMessage {
  string string = 1;
  int32 int = 2;
}

message StringListMessage {
  repeated string strings = 1;
}

message StringMessage {
  string string = 1;
}

message String2Message {
  string string1 = 1;
  string string2 = 2;
}

message ProductListMessage {
  repeated ProductMessage products = 1;
}

message BooleanMessage {
  bool boolean = 1;
}

message EmptyMessage {

}

service ProductProtoService {
  rpc save(AccountProductMessage) returns (BooleanMessage);
  rpc getByUrl(StringMessage) returns (ProductMessage);
  rpc getAllByAccountUuidAndPage(StringIntMessage) returns (ProductListMessage);
}

service MarketplaceProtoService {
  rpc isMarketplaceSupports(StringMessage) returns (BooleanMessage);
  rpc getSupportedMarketplaces(EmptyMessage) returns (StringListMessage);
}